# custom-crafting

./: .gitignore  README.md  beet.yml  pyproject.toml
datapack/: pack.mcmeta
datapack/data/load/tags/functions/: standard.json
datapack/data/vplib/advancements/custom_crafting/__ver/recipes/: universal_crafting_table.json
datapack/data/vplib/functions/custom_crafting/__ver/api/: uninstall.mcfunction
datapack/data/vplib/functions/custom_crafting/__ver/block/: drop_item_frame.mcfunction  placed_item_frame.mcfunction
datapack/data/vplib/functions/custom_crafting/__ver/core/: clear_temp_storage.mcfunction  load_items.mcfunction  uninstall.mcfunction
datapack/data/vplib/functions/custom_crafting/__ver/load/: check.mcfunction  enumerate.mcfunction  load.mcfunction  recipes.mcfunction  resolve.mcfunction
datapack/data/vplib/functions/custom_crafting/__ver/recipes/: universal_crafting_table.mcfunction
datapack/data/vplib/functions/custom_crafting/__ver/tick/: 1.mcfunction
datapack/data/vplib/functions/load/: init.mcfunction
datapack/data/vplib/tags/blocks/block_placement/__ver/: furnaces.json
datapack/data/vplib/tags/entity_types/block_placement/__ver/: block_marker.json
datapack/data/vplib/tags/functions/load/: init.json  library.json
resourcepack/: pack.mcmeta
resourcepack/assets/minecraft/models/item/: gray_stained_glass_pane.json  item_frame.json
resourcepack/assets/vplib/font/custom_crafting/__ver/: gui.json
resourcepack/assets/vplib/lang/: pt_br.json
tools/release-builder/: main.py
(+57 files in other folders)
