[tool.poetry]
name = "custom-crafting"
version = "0.1.0"
description = ""
authors = ["TheWii"]
license = "MIT"
readme = "README.md"
packages = [{include = "custom_crafting"}]

[tool.poetry.dependencies]
python = "^3.11"
mecha = ">=0.76.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
